--- a/Program/IOC/IOC.csproj
+++ b/Program/IOC/IOC.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IContainer.cs" />
     <Compile Include="IOCContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
