Added setter inject

--- a/Program/IOC/IOC.csproj
+++ b/Program/IOC/IOC.csproj
@@ -43,6 +43,12 @@
     <Compile Include="IOCContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Inject\Inject.csproj">
+      <Project>{2a914378-b279-4a5d-b3ef-305aa47b30aa}</Project>
+      <Name>Inject</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
